# pyqt

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml  release_windows.yml
src/: app.py  config.py  helpers.py  schema.py
src/services/: excel.py  pdf.py  processor.py
src/strategies/: base.py  kaufland.py  metro.py  provitus.py  standard.py
